PLANET-7650 Fix News & Stories top spacing on mobile (#2612)
This was due to the behaviour of the mobile tabs class

--- a/assets/src/scss/base/_body.scss
+++ b/assets/src/scss/base/_body.scss
@@ -16,6 +16,18 @@ body {
   .mejs-container {
     clear: initial;
   }
+
+  @include medium-and-less {
+    &.with-mobile-tabs {
+      .page-header {
+        padding-top: 140px;
+      }
+
+      .no-page-title {
+        padding-top: 110px;
+      }
+    }
+  }
 }
 
 .container > * {
